--- a/class-05/demo/index.html
+++ b/class-05/demo/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Jedi vs Sith Wars</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
     <header>
@@ -16,7 +17,7 @@
         </nav>
     </header>
     <section>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ce/Nebuta_Star_Wars_in_Light_side_Jedi.jpg/800px-Nebuta_Star_Wars_in_Light_side_Jedi.jpg">
+        <img id="hero" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ce/Nebuta_Star_Wars_in_Light_side_Jedi.jpg/800px-Nebuta_Star_Wars_in_Light_side_Jedi.jpg">
         <p>Lucas ipsum dolor sit amet sing mon b'omarr shi'ido luminara quinlan tof ithorian ooryl organa. Kael gorax logray paaerduag kitonak chirrpa aqualish hoojib. Dulok raymus chistori jacen. Saffa leia cb-99 rishi. Darth moddell elrood fel hallotan. Wookiee ongree vuffi roan axmis maris polis -1b ralter. Caamasi chewbacca katarn gordin organa caamasi. Darklighter chewbacca zam ben darth borsk anakin. Jobal watto hutt moff wedge watto draethos dantari jango. Kyp hoth kathol codru-ji evocii. Jagged jade bren ventress jan.</p>
     </section>
     <footer>
